test/abort2.slq

def fake_abort(){ assert(true); }

def main():ğ”¹{ // error
	fake_abort();
}
